--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
         <div class="about px-20 py-5 flex items-center gap-6">
             <div class="profileImg h-[10.5vw] rounded-full overflow-hidden aspect-square">
                 <img class="h-full w-full object-cover"
-                    src="https://yt3.googleusercontent.com/ytc/AIdro_lxymYXNITfuoAkr58fuQ1TCLZmjmHSG2IpYX20xw=s176-c-k-c0x00ffffff-no-rj"
+                    src="/uploads/images/def.jpg"
                     alt="">
             </div>
             <div class="details">
@@ -25,65 +25,69 @@
                     <%}%>
             </div>
         </div>
-        <div class="caetogary px-20 border-b border-b-zinc-200 w-full mb-4 flex gap-5 items-center">
-            <h1
-                class="font-medium text-lg py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-black">
+        <div class="category px-20 border-b border-b-zinc-200 w-full mb-4 flex gap-5 items-center">
+            <h1 onclick="showAll(this,'content')"
+                class="cursor-pointer font-medium text-lg py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-black">
                 Home</h1>
-            <h1
-                class="font-medium text-lg py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
+            <h1 onclick="showAll(this,'video')"
+                class="cursor-pointer font-medium text-lg py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
                 Videos</h1>
-            <h1
-                class="font-medium text-lg py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
+            <h1 onclick="showAll(this,'playlist')"
+                class="cursor-pointer font-medium text-lg py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
                 Playlist</h1>
             <i class="ri-search-line text-lg text-zinc-500"></i>
             <input class="outline-none py-[.6vw] focus:border-b-zinc-900 border-b-transparent border-b-2 mt-auto -ml-3"
                 type="text">
         </div>
-        <div class="videos px-20 relative grid grid-cols-3 gap-5 h-max py-2">
+        <div class="filteredVideo videos px-20 relative grid grid-cols-3 gap-5 justify-start h-max py-2">
             <%videos.forEach(video=>{%>
 
                 <a href="/<%=video.type?'video/'+video._id:'playlist/'+video._id%>">
-                <div class=" mb-1 video ">
+                    <div class=" mb-1 video ">
 
-                    <div class="rounded-xl w-full relative h-56 bg-zinc-200 mb-2">
-                        <%if(video.thumbnail){%>
-                            <div class="thumbnail absolute top-0 left-0 flex items-center justify-center w-full h-full z-[9] overflow-hidden bg-zinc-800 rounded-xl">
-                                <img src="/uploads/images/<%=video.thumbnail%>"
-                                    class="<%=video.type==='short'?'w-32':'w-full'%> h-full object-cover" alt="">
-                            </div>
-                            <%}%>   
-                            <%if(!video.type){%>
+                        <div class="rounded-xl w-full relative aspect-video bg-zinc-200 mb-2">
+                            <%if(video.thumbnail){%>
                                 <div
-                                    class="h-56 w-[96%] rounded-xl -top-2  absolute left-1/2 -translate-x-1/2 bg-zinc-300 ">
+                                    class="thumbnail absolute top-0 left-0 flex items-center justify-center w-full h-full z-[9] overflow-hidden bg-zinc-800 rounded-xl">
+                                    <img src="/uploads/images/<%=video.thumbnail%>"
+                                        class="<%=video.type==='short'?'w-32':'w-full'%> h-full object-cover" alt="">
                                 </div>
-                                <div
-                                    class="h-56 w-[98%] rounded-xl -top-1  absolute left-1/2 -translate-x-1/2 bg-zinc-400 ">
-                                </div>
+                                
                                 <%}%>
-                                <video class="rounded-xl relative h-56 bg-zinc-200 mb-2" src="">
-                                </video>
+                                    <%if(!video.type){%>
+                                        <div
+                                            class="h-56 w-[96%] rounded-xl -top-2  absolute left-1/2 -translate-x-1/2 bg-zinc-300 ">
+                                        </div>
+                                        <div
+                                            class="h-56 w-[98%] rounded-xl -top-1  absolute left-1/2 -translate-x-1/2 bg-zinc-400 ">
+                                        </div>
+                                        <%}%>
+                                            <video class="rounded-xl relative h-56 bg-zinc-200 mb-2" src="">
+                                            </video>
 
-                    </div>
-                    <h2 class="leading-tight">
-                        <%=video.title%>
-                    </h2>
-                    <h4 class="text-zinc-500 text-sm">
-                        <%=user.channel%>
-                    </h4>
-                    <div class="flex gap-1 items-center text-zinc-500">
-                        <%if(video.views){%>
-                            <h4 class="text-sm">
-                                <%=video.views.length%> views
-                            </h4>
-                            <i class="ri-circle-fill text-[4px]"></i>
-                            <%}%>
-                            <h4 class="text-sm"><%=video.timespan%> ago</h4>
+                        </div>
+                        <h2 class="leading-tight">
+                            <%=video.title%>
+                        </h2>
+                        <h4 class="text-zinc-500 text-sm">
+                            <%=user.channel%>
+                        </h4>
+                        <div class="flex gap-1 items-center text-zinc-500">
+                            <%if(video.views){%>
+                                <h4 class="text-sm">
+                                    <%=video.views.length%> views
+                                </h4>
+                                <i class="ri-circle-fill text-[4px]"></i>
+                                <%}%>
+                                    <h4 class="text-sm">
+                                        <%=video.timespan%> ago
+                                    </h4>
 
+                        </div>
                     </div>
-                </div>
                 </a>
                 <%})%>
-            
+
 
 
 
@@ -92,7 +96,81 @@
     </div>
 
 
- 
+
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
+        integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+
+document.querySelector('.focused').classList.remove("focused","bg-zinc-300")
+        document.querySelector('#channel').classList.add("focused","bg-zinc-300")
+
+        function showAll(btn, type) {
+            btn.parentNode.querySelectorAll('h1').forEach((e) => {
+                e.style.borderBottom = "2px solid transparent"
+            })
+            btn.style.borderBottom = "2px solid black"
+
+            axios.post(`/showall/${type}`, { userId: '<%=user._id%>' })
+                .then(response => {
+                    btn.parentNode.parentNode.querySelector('.filteredVideo').innerHTML = ''
+                    let thumbnail = ''
+                    response.data.forEach((video, i) => {
+                        if (video.thumbnail) {
+                            thumbnail = `
+                                <div class="thumbnail absolute top-0 left-0 w-full h-full z-[9] overflow-hidden bg-zinc-800 flex justify-center items-center rounded-xl">
+                                    <img src="/uploads/images/${video.thumbnail}"
+                                        class="${video.type === 'short' ? 'w-32' : 'w-full'} h-full object-cover" alt="">
+                                </div>
+                                `
+                        }
+                        if (video.type) {
+                            btn.parentNode.parentNode.querySelector('.filteredVideo').innerHTML += `
+                            <a href="/video/${video._id}">
+                                <div class=" mb-1 video ">
+                                    <div class="rounded-xl w-full relative w-full aspect-video bg-zinc-200 mb-2">${thumbnail}</div>
+                                    <h2 class="leading-tight">${video.title}</h2>
+                                    <h4 class="text-zinc-500 text-sm">${video.user.channel}</h4>
+                                    <div class="flex gap-1 items-center text-zinc-500">
+                                        <h4 class="text-sm">${video.views ? video.views.length + ' views' : ''}</h4>
+                                        <i class="ri-circle-fill text-[4px]"></i>
+                                    </div>
+                                </div>
+                            </a>
+                            `
+                        } else {
+                            btn.parentNode.parentNode.querySelector('.filteredVideo').innerHTML += `
+                            <a href="/playlist/${video._id}">
+                                <div class=" mb-1 video ">
+                                    <div class="rounded-xl w-full relative w-full aspect-video bg-zinc-200 mb-2">
+                                        <div
+                                            class="h-full w-[96%] rounded-xl -top-2  absolute left-1/2 -translate-x-1/2 bg-zinc-300 ">
+                                        </div>
+                                        <div
+                                            class="h-full w-[98%] rounded-xl -top-1  absolute left-1/2 -translate-x-1/2 bg-zinc-400 ">
+                                        </div>
+                                        ${thumbnail}
+                                    </div>
+                                    <h2 class="leading-tight">${video.title}</h2>
+                                    <h4 class="text-zinc-500 text-sm">${video.user.channel}</h4>
+                                </div>
+                            </a>
+                            `
+
+                        }
+                    })
+                })
+        }
+
+
+
+    </script>
+
+
 
 
     <% include ./partials/footer.ejs %>
